# content-catcher

./: .gitignore  .smtp_secret.template  CHANGELOG.md  DEPLOYMENT.md  README.md  SKILL.md  catch.py  channels.example.yaml  content-catcher-manual.docx  install.sh  pyproject.toml  requirements.txt  sample_urls.txt  项目说明书.docx
docs/: MANUAL.md  SUBSCRIPTION_GUIDE.md
scripts/: _bin.py  batch.py  build_manual_docx.js  build_manual_docx.py  build_manual_v2_docx.js  build_prompt.py  cache.py  chunker.py  detect_language.py  detect_platform.py  digest.py  digest_history.py  doctor.py  download_audio.py  email_sender.py  export_epub.py  fetch_podcast_rss.py  fetch_subtitle.py  fetch_xiaohongshu.py  get_metadata.py  manage_channels.py  run_llm.py  save_output.py  subscribe.py  transcribe.py
templates/: chapter_polished.md  chinese_notes.md  cross_platform_compare.md  deep_book.md  english_bilingual.md  full_transcript.md  topic_collection.md  weekly_digest.md  xiaohongshu_note.md
tests/: fixtures_urls.txt  real_case_lex.py  send_test_email.py  smoke_build_prompt.py  smoke_m3.py  smoke_m4.py  smoke_m5.py  test_build_epub_polished.py  test_email_sender_unicode.py  test_export_epub.py  test_youtube_fetcher_chain.py
